--- a/templates/add_child.html
+++ b/templates/add_child.html
@@ -128,11 +128,12 @@
     <h2>Growth Guardian</h2>
 </div>
         <div class="nav-links">
-    <a href="index.html">Home</a>
-    <a href="add_child.html">Add Child</a>
-    <a href="dashboard.html">Dashboard</a>
-    <a href="consultation.html">Consult Doctor</a>
+  <a href="{{ url_for('home') }}">Home</a>
+  <a href="{{ url_for('add_child') }}">Add Child</a>
+  <a href="{{ url_for('dashboard') }}">Dashboard</a>
+  <a href="{{ url_for('consultation') }}">Consult Doctor</a>
 </div>
+
     </nav>
 
     <div class="container">
