--- a/templates/consultation.html
+++ b/templates/consultation.html
@@ -335,11 +335,11 @@
         <h2 style="color: #667eea; margin: 0;">Growth Guardian</h2>
     </div>
     <div class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="add_child.html">Add Child</a>
-        <a href="dashboard.html">Dashboard</a>
-        
-    </div>
+    <a href="/">Home</a>
+    <a href="/add-child">Add Child</a>
+    <a href="/dashboard">Dashboard</a>
+</div>
+
 </nav>
 
     <div class="container">
