--- a/templates/consultation.html
+++ b/templates/consultation.html
@@ -335,10 +335,11 @@
         <h2 style="color: #667eea; margin: 0;">Growth Guardian</h2>
     </div>
     <div class="nav-links">
-    <a href="/">Home</a>
-    <a href="/add-child">Add Child</a>
-    <a href="/dashboard">Dashboard</a>
+    <a href="{{ url_for('home') }}">Home</a>
+    <a href="{{ url_for('add_child') }}">Add Child</a>
+    <a href="{{ url_for('dashboard') }}">Dashboard</a>
 </div>
+
 
 </nav>
 
