--- a/templates/index.html
+++ b/templates/index.html
@@ -144,6 +144,7 @@
         
         <a href="{{ url_for('add_child') }}">Add Child</a>
         <a href="{{ url_for('dashboard') }}">Dashboard</a>
+        <a href="{{ url_for('chatbot') }}">🤖 AI Assistant</a>
         <a href="{{ url_for('consultation') }}">Consult Doctor</a>
     </div>
 </nav>
